extra-manifests/bitwarden/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-external-secrets
  namespace: bitwarden
spec:
  podSelector: {}  # Applies to all pods in namespace 'b'
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: external-secrets
      ports:
        - protocol: TCP
          port: 8087
